fix: dark mode

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -44,7 +44,7 @@ body {
     sans-serif;
   font-size: 15px;
   /* background-color: var(--bg-color); */
-  color: var(--text-color);
+  /* color: var(--text-color); */
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
