--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -1,2 +1,6 @@
 @import 'tailwindcss';
-@plugin "daisyui";
+@custom-variant dark (&:where(.dark, .dark *));
+
+@plugin "daisyui" {
+  themes: light --default, dark --prefersdark;
+}
